--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "eslint-plugin-unicorn": "^48.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.1",
-    "typescript": "^5.1.6",
-    "typescript-plugin-css-modules": "^5.0.1"
+    "typescript": "^5.1.6"
   }
 }
