--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-xo-space": "^0.34.0",
     "eslint-config-xo-typescript": "^1.0.1",
     "eslint-plugin-functional": "^6.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "7.33.2",
