--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "repository": "https://github.com/eglove/eslint-config-ethang",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "build": "node build.mjs"
   },
   "keywords": [],
   "author": "Ethan Glover",
@@ -15,9 +16,9 @@
     ]
   },
   "peerDependencies": {
-    "eslint": "^8.44.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.1.6"
+    "eslint": "^8.48.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
