--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     ]
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-react": "^0.27.0",
@@ -49,6 +49,7 @@
     "eslint-config-xo-react": "^0.27.0",
     "eslint-config-xo-space": "^0.34.0",
     "eslint-config-xo-typescript": "^1.0.1",
+    "eslint-plugin-astro": "^0.29.0",
     "eslint-plugin-functional": "^6.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -62,6 +63,7 @@
     "eslint-plugin-unicorn": "^48.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
     "typescript": "^5.2.2"
   }
 }
