--- a/package.json
+++ b/package.json
@@ -15,77 +15,31 @@
       "./.eslintrc.js"
     ]
   },
-  "peerDependencies": [
-    {
-      "eslint": "^8.50.0"
-    },
-    {
-      "@typescript-eslint/eslint-plugin": "^6.7.3"
-    },
-    {
-      "@typescript-eslint/parser": "^6.7.3"
-    },
-    {
-      "eslint-config-prettier": "^9.0.0"
-    },
-    {
-      "eslint-config-xo": "^0.43.1"
-    },
-    {
-      "eslint-config-xo-react": "^0.27.0"
-    },
-    {
-      "eslint-config-xo-space": "^0.34.0"
-    },
-    {
-      "eslint-config-xo-typescript": "^1.0.1"
-    },
-    {
-      "eslint-plugin-astro": "^0.29.0"
-    },
-    {
-      "eslint-plugin-functional": "^6.0.0"
-    },
-    {
-      "eslint-plugin-import": "^2.28.1"
-    },
-    {
-      "eslint-plugin-jsx-a11y": "^6.7.1"
-    },
-    {
-      "eslint-plugin-prettier": "^5.0.0"
-    },
-    {
-      "eslint-plugin-react": "7.33.2"
-    },
-    {
-      "eslint-plugin-react-hooks": "^4.6.0"
-    },
-    {
-      "eslint-plugin-simple-import-sort": "^10.0.0"
-    },
-    {
-      "eslint-plugin-sort-keys-fix": "^1.1.2"
-    },
-    {
-      "eslint-plugin-tailwindcss": "^3.13.0"
-    },
-    {
-      "eslint-plugin-typescript-sort-keys": "^3.0.0"
-    },
-    {
-      "eslint-plugin-unicorn": "^48.0.1"
-    },
-    {
-      "eslint-plugin-unused-imports": "^3.0.0"
-    },
-    {
-      "prettier": "^3.0.3"
-    },
-    {
-      "typescript": "^5.2.2"
-    }
-  ],
+  "peerDependencies": {
+    "eslint": "^8.50.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-react": "^0.27.0",
+    "eslint-config-xo-space": "^0.34.0",
+    "eslint-config-xo-typescript": "^1.0.1",
+    "eslint-plugin-astro": "^0.29.0",
+    "eslint-plugin-functional": "^6.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-typescript-sort-keys": "^3.0.0",
+    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
+  },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
