--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "peerDependencies": {
+    "@rushstack/eslint-patch": "^1.6.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
@@ -67,5 +68,8 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.0"
+  },
+  "devDependencies": {
+    "@ethang/project-builder": "^1.0.1"
   }
 }
