--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^5.3.0"
   },
   "dependencies": {
+    "@rushstack/eslint-patch": "^1.6.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
