--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "peerDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
