--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --fix",
     "build": "node build.mjs"
   },
-  "keywords": [],
+  "type": "module",
   "author": "Ethan Glover",
   "license": "ISC",
   "peerDependencies": {
@@ -25,6 +25,8 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^52.0.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
