--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "author": "Ethan Glover",
   "license": "ISC",
   "peerDependencies": {
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-unicorn": "^51.0.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unicorn": "^52.0.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0"
   },
   "dependencies": {
     "@eslint/js": "^9.0.0",
