--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unicorn": "^52.0.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0"
   },
   "devDependencies": {
-    "@ethang/project-builder": "^1.1.35",
-    "eslint-plugin-simple-import-sort": "^12.1.0"
+    "@ethang/project-builder": "^1.1.35"
   }
 }
