--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript-eslint": "^7.10.0"
   },
   "devDependencies": {
-    "@ethang/project-builder": "^1.1.37"
+    "@ethang/project-builder": "^1.1.37",
+    "eslint-plugin-sonarjs": "^1.0.3"
   }
 }
