--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-sonarjs": "^1.0.3",
     "eslint-plugin-unicorn": "^53.0.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0"
   },
   "devDependencies": {
-    "@ethang/project-builder": "^1.1.37",
-    "eslint-plugin-sonarjs": "^1.0.3"
+    "@ethang/project-builder": "^1.1.37"
   }
 }
