--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "typescript-eslint": "^7.11.0"
   },
   "devDependencies": {
-    "@ethang/project-builder": "^1.1.38"
+    "@ethang/project-builder": "^1.1.38",
+    "@tsconfig/node-lts": "^20.1.3",
+    "@tsconfig/strictest": "^2.0.5"
   }
 }
