--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@eslint/js": "^9.4.0",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
