--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "eslint.config.js",
   "scripts": {
     "lint": "eslint . --fix",
-    "build": "node build.mjs"
+    "build": "pnpx @eslint/config-inspector build"
   },
   "engines": {
     "node": ">=20"
