--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sonarjs": "^1.0.3",
+    "eslint-plugin-sonarjs": "1.0.3",
     "eslint-plugin-unicorn": "^54.0.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
@@ -47,7 +47,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sonarjs": "^1.0.3",
+    "eslint-plugin-sonarjs": "1.0.3",
     "eslint-plugin-unicorn": "^54.0.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
