--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-n": "^17.10.1",
     "eslint-plugin-perfectionist": "^3.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-sonarjs": "1.0.4",
     "eslint-plugin-unicorn": "^55.0.0",
     "prettier": "^3.3.3",
