--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-barrel-files": "^2.1.0",
+    "eslint-plugin-depend": "^0.9.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-n": "^17.10.1",
     "eslint-plugin-perfectionist": "^3.1.0",
