--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "eslint-plugin-n": "^17.10.1",
     "eslint-plugin-perfectionist": "^3.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-sonarjs": "1.0.4",
     "eslint-plugin-unicorn": "^55.0.0",
@@ -35,6 +34,7 @@
     "typescript-eslint": "^8.0.0"
   },
   "dependencies": {
+    "@eslint-react/eslint-plugin": "^1.8.2",
     "@eslint/js": "^9.8.0",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.0",
