--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "main": "eslint.config.js",
   "scripts": {
-    "lint": "eslint . --fix --ignore-pattern=\".eslint-config-inspector\"",
+    "lint": "eslint ./*.js --fix --ignore-pattern=\".eslint-config-inspector\"",
     "build": "pnpx @eslint/config-inspector build"
   },
   "engines": {
