--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-barrel-files": "^2.1.0",
     "eslint-plugin-compat": "^6.0.0",
     "eslint-plugin-depend": "^0.9.0",
+    "eslint-plugin-exception-handling": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.10.1",
