--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.10.1",
-    "eslint-plugin-perfectionist": "^3.1.0",
+    "eslint-plugin-perfectionist": "^3.1.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-solid": "^0.14.1",
     "eslint-plugin-sonarjs": "1.0.4",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unicorn": "^55.0.0",
