--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.1",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-barrel-files": "^2.1.0",
     "eslint-plugin-compat": "^6.0.0",
@@ -30,13 +29,11 @@
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-perfectionist": "^3.1.2",
-    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-solid": "^0.14.1",
     "eslint-plugin-sonarjs": "1.0.4",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unicorn": "^55.0.0",
-    "prettier": "^3.3.3",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
   },
@@ -46,7 +43,6 @@
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.1",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-barrel-files": "^2.1.0",
     "eslint-plugin-compat": "^6.0.0",
@@ -55,18 +51,17 @@
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-perfectionist": "^3.1.2",
-    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-solid": "^0.14.1",
     "eslint-plugin-sonarjs": "1.0.4",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unicorn": "^55.0.0",
-    "prettier": "^3.3.3",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
   },
   "devDependencies": {
     "@ethang/project-builder": "^1.2.2",
+    "@stylistic/eslint-plugin": "^2.6.1",
     "@tsconfig/node-lts": "^20.1.3",
     "@tsconfig/strictest": "^2.0.5"
   }
