--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.9.0",
     "@eslint/js": "^9.8.0",
+    "@stylistic/eslint-plugin": "^2.6.1",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.1",
     "eslint": "^9.8.0",
