--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@eslint-react/eslint-plugin": "^1.9.1",
     "@eslint/js": "^9.8.0",
+    "@eslint/json": "^0.3.0",
     "@stylistic/eslint-plugin": "^2.6.1",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.1",
