--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.9.1",
     "@eslint/js": "^9.8.0",
-    "@stylistic/eslint-plugin": "^2.6.1",
+    "@eslint/json": "^0.3.0",
+    "@stylistic/eslint-plugin": "^2.6.2",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.1",
     "eslint": "^9.8.0",
