--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "main": "eslint.config.js",
   "scripts": {
-    "lint": "eslint ./*.js --fix --ignore-pattern=\".eslint-config-inspector\"",
+    "lint": "eslint . --fix --ignore-pattern=\".eslint-config-inspector\"",
     "build": "pnpx @eslint/config-inspector build"
   },
   "engines": {
@@ -18,7 +18,6 @@
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.10.0",
     "@eslint/js": "^9.9.0",
-    "@eslint/json": "^0.3.0",
     "@stylistic/eslint-plugin": "^2.6.2",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.1",
@@ -42,7 +41,6 @@
   "dependencies": {
     "@eslint-react/eslint-plugin": "^1.10.0",
     "@eslint/js": "^9.9.0",
-    "@eslint/json": "^0.3.0",
     "@stylistic/eslint-plugin": "^2.6.2",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@typescript-eslint/parser": "^8.0.1",
