--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "main": "eslint.config.js",
   "scripts": {
-    "lint": "eslint . --fix --ignore-pattern=\".eslint-config-inspector\"",
+    "lint": "prettier . -w",
     "build": "pnpx @eslint/config-inspector build"
   },
   "engines": {
@@ -40,22 +40,22 @@
   },
   "dependencies": {
     "@eslint-react/eslint-plugin": "^1.12.1",
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.9.1",
     "@stylistic/eslint-plugin": "^2.6.4",
     "@tanstack/eslint-plugin-query": "^5.52.0",
     "@typescript-eslint/parser": "^8.2.0",
-    "eslint": "^9.9.0",
+    "eslint": "^9.9.1",
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-barrel-files": "^2.1.0",
     "eslint-plugin-compat": "^6.0.0",
-    "eslint-plugin-depend": "^0.10.0",
+    "eslint-plugin-depend": "^0.11.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-perfectionist": "^3.2.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-solid": "^0.14.2",
-    "eslint-plugin-sonarjs": "2.0.0",
+    "eslint-plugin-sonarjs": "2.0.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unicorn": "^55.0.0",
     "typescript": "^5.5.4",
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@ethang/project-builder": "^2.3.10",
     "@tsconfig/node-lts": "^20.1.3",
-    "@tsconfig/strictest": "^2.0.5"
+    "@tsconfig/strictest": "^2.0.5",
+    "prettier": "^3.3.3"
   }
 }
