--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "@eslint-react/eslint-plugin": "^1.12.1",
     "@eslint/js": "^9.9.1",
+    "@eslint/json": "^0.4.0",
+    "@eslint/markdown": "^6.0.0",
     "@stylistic/eslint-plugin": "^2.6.4",
     "@tanstack/eslint-plugin-query": "^5.52.0",
     "@typescript-eslint/parser": "^8.2.0",
