--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.0.11",
+  "version": "19.1.0",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -18,6 +18,8 @@
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.12.1",
     "@eslint/js": "^9.9.1",
+    "@eslint/json": "^0.4.0",
+    "@eslint/markdown": "^6.0.0",
     "@stylistic/eslint-plugin": "^2.6.4",
     "@tanstack/eslint-plugin-query": "^5.52.0",
     "@typescript-eslint/parser": "^8.2.0",
