--- a/package.json
+++ b/package.json
@@ -4,41 +4,13 @@
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
+  "license": "ISC",
+  "author": "Ethan Glover",
+  "type": "module",
   "main": "eslint.config.js",
   "scripts": {
-    "lint": "prettier . -w",
-    "build": "pnpx @eslint/config-inspector build"
-  },
-  "engines": {
-    "node": ">=20"
-  },
-  "type": "module",
-  "author": "Ethan Glover",
-  "license": "ISC",
-  "peerDependencies": {
-    "@eslint-react/eslint-plugin": "^1.12.1",
-    "@eslint/js": "^9.9.1",
-    "@eslint/json": "^0.4.0",
-    "@eslint/markdown": "^6.0.0",
-    "@stylistic/eslint-plugin": "^2.6.4",
-    "@tanstack/eslint-plugin-query": "^5.52.0",
-    "@typescript-eslint/parser": "^8.2.0",
-    "eslint": "^9.9.1",
-    "eslint-plugin-astro": "^1.2.3",
-    "eslint-plugin-barrel-files": "^2.1.0",
-    "eslint-plugin-compat": "^6.0.0",
-    "eslint-plugin-depend": "^0.11.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-lodash": "^8.0.0",
-    "eslint-plugin-n": "^17.10.2",
-    "eslint-plugin-perfectionist": "^3.2.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-solid": "^0.14.2",
-    "eslint-plugin-sonarjs": "2.0.1",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "eslint-plugin-unicorn": "^55.0.0",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0"
+    "build": "pnpx @eslint/config-inspector build",
+    "lint": "prettier . -w"
   },
   "dependencies": {
     "@eslint-react/eslint-plugin": "^1.12.1",
@@ -71,5 +43,33 @@
     "@tsconfig/node-lts": "^20.1.3",
     "@tsconfig/strictest": "^2.0.5",
     "prettier": "^3.3.3"
+  },
+  "peerDependencies": {
+    "@eslint-react/eslint-plugin": "^1.12.1",
+    "@eslint/js": "^9.9.1",
+    "@eslint/json": "^0.4.0",
+    "@eslint/markdown": "^6.0.0",
+    "@stylistic/eslint-plugin": "^2.6.4",
+    "@tanstack/eslint-plugin-query": "^5.52.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^9.9.1",
+    "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-barrel-files": "^2.1.0",
+    "eslint-plugin-compat": "^6.0.0",
+    "eslint-plugin-depend": "^0.11.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-lodash": "^8.0.0",
+    "eslint-plugin-n": "^17.10.2",
+    "eslint-plugin-perfectionist": "^3.2.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-solid": "^0.14.2",
+    "eslint-plugin-sonarjs": "2.0.1",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
