--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.2.7",
+  "version": "19.2.7-beta.0",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -50,6 +50,7 @@
     "@eslint/js": "^9.9.1",
     "@eslint/json": "^0.4.0",
     "@eslint/markdown": "^6.0.0",
+    "@ethang/eslint-plugin": "^0.0.3",
     "@stylistic/eslint-plugin": "^2.7.2",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@typescript-eslint/parser": "^8.3.0",
