--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.2.7-beta.NaN",
+  "version": "19.2.7-beta.0",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@ethang/markdown-generator": "^1.1.1",
-    "@ethang/project-builder": "^2.5.5",
+    "@ethang/project-builder": "^2.5.4",
     "@tsconfig/node-lts": "^20.1.3",
     "@tsconfig/strictest": "^2.0.5",
     "prettier": "^3.3.3"
