--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.2.7-beta.0",
+  "version": "19.2.7-beta.beta.1",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
