--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.2.7-beta.4",
+  "version": "19.2.8",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -31,7 +31,7 @@
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-perfectionist": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-solid": "^0.14.2",
+    "eslint-plugin-solid": "^0.14.3",
     "eslint-plugin-sonarjs": "2.0.2",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unicorn": "^55.0.0",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@ethang/markdown-generator": "^1.1.1",
-    "@ethang/project-builder": "^2.5.7",
+    "@ethang/project-builder": "^2.5.8",
     "@tsconfig/node-lts": "^20.1.3",
     "@tsconfig/strictest": "^2.0.5",
     "prettier": "^3.3.3"
@@ -64,7 +64,7 @@
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-perfectionist": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-solid": "^0.14.2",
+    "eslint-plugin-solid": "^0.14.3",
     "eslint-plugin-sonarjs": "2.0.2",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unicorn": "^55.0.0",
