--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@ethang/project-builder": "^2.5.8",
     "@tsconfig/node-lts": "^20.1.3",
     "@tsconfig/strictest": "^2.0.5",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "tsx": "^4.19.0"
   },
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.13.0",
