--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@eslint-react/eslint-plugin": "^1.13.0",
+    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.10.0",
     "@eslint/json": "^0.4.0",
     "@eslint/markdown": "^6.1.0",
