--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.4.2",
+  "version": "19.4.3",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -48,6 +48,7 @@
   },
   "peerDependencies": {
     "@eslint-react/eslint-plugin": "^1.13.0",
+    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.10.0",
     "@eslint/json": "^0.4.0",
     "@eslint/markdown": "^6.1.0",
