move to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,9 @@
   "extends": [
     "@tsconfig/node-lts/tsconfig.json",
     "@tsconfig/strictest/tsconfig.json"
-  ]
+  ],
+  "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "lib": ["dom"]
+  }
 }
