--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "@ethang/project-builder": "^2.5.10",
     "@tsconfig/node-lts": "^20.1.3",
     "@tsconfig/strictest": "^2.0.5",
+    "@types/eslint-plugin-jsx-a11y": "^6.9.0",
+    "@types/eslint-plugin-tailwindcss": "^3.17.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.5.4",
     "prettier": "^3.3.3"
   },
   "peerDependencies": {
