--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "prettier . -w"
   },
   "dependencies": {
+    "@cspell/eslint-plugin": "^8.14.2",
     "@eslint-react/eslint-plugin": "^1.14.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.10.0",
