--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.4.6",
+  "version": "19.5.0",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -52,6 +52,7 @@
     "prettier": "^3.3.3"
   },
   "peerDependencies": {
+    "@cspell/eslint-plugin": "^8.14.2",
     "@eslint-react/eslint-plugin": "^1.14.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.10.0",
