--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ethang/eslint-plugin": "^0.0.10",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@tanstack/eslint-plugin-query": "^5.56.1",
+    "@tanstack/eslint-plugin-router": "^1.58.0",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.10.0",
     "eslint-plugin-astro": "^1.2.4",
