--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.5.8",
+  "version": "19.6.0",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -62,6 +62,7 @@
     "@ethang/eslint-plugin": "^0.0.10",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@tanstack/eslint-plugin-query": "^5.56.1",
+    "@tanstack/eslint-plugin-router": "^1.58.0",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.10.0",
     "eslint-plugin-astro": "^1.2.4",
