--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-barrel-files": "^2.1.0",
     "eslint-plugin-compat": "^6.0.1",
     "eslint-plugin-depend": "^0.11.0",
+    "eslint-plugin-exception-handling": "^1.4.2",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.10.3",
