--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@eslint/json": "^0.4.0",
     "@eslint/markdown": "^6.1.0",
     "@stylistic/eslint-plugin": "^2.8.0",
-    "@tanstack/eslint-plugin-query": "^5.57.0",
+    "@tanstack/eslint-plugin-query": "^5.57.1",
     "@tanstack/eslint-plugin-router": "^1.58.6",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.11.0",
@@ -60,7 +60,7 @@
     "@eslint/json": "^0.4.0",
     "@eslint/markdown": "^6.1.0",
     "@stylistic/eslint-plugin": "^2.8.0",
-    "@tanstack/eslint-plugin-query": "^5.57.0",
+    "@tanstack/eslint-plugin-query": "^5.57.1",
     "@tanstack/eslint-plugin-router": "^1.58.6",
     "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^9.11.0",
@@ -68,6 +68,7 @@
     "eslint-plugin-barrel-files": "^2.1.0",
     "eslint-plugin-compat": "^6.0.1",
     "eslint-plugin-depend": "^0.11.0",
+    "eslint-plugin-exception-handling": "^1.4.2",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.10.3",
