--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/json": "^0.4.0",
     "@eslint/markdown": "^6.1.0",
     "@stylistic/eslint-plugin": "^2.8.0",
+    "@stylistic/eslint-plugin-ts": "^2.8.0",
     "@tanstack/eslint-plugin-query": "^5.57.1",
     "@tanstack/eslint-plugin-router": "^1.58.6",
     "@typescript-eslint/parser": "^8.6.0",
