--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/eslint-config",
-  "version": "19.7.5",
+  "version": "19.8.0",
   "repository": {
     "url": "git+https://github.com/eglove/eslint-config-ethang.git"
   },
@@ -61,6 +61,7 @@
     "@eslint/json": "^0.4.0",
     "@eslint/markdown": "^6.1.0",
     "@stylistic/eslint-plugin": "^2.8.0",
+    "@stylistic/eslint-plugin-ts": "^2.8.0",
     "@tanstack/eslint-plugin-query": "^5.57.1",
     "@tanstack/eslint-plugin-router": "^1.58.6",
     "@typescript-eslint/parser": "^8.6.0",
